<resources>
    <string name="app_name">GeSTLiga</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cancelar">Cancelar</string>
    <string name="BDNoAbierta">No se pudo abrir la BD</string>
    <string name="BDEliminado">Registro eliminado con éxito</string>
    <string name="BDNoEliminado">No se pudo eliminar el registro</string>
    <string name="BDModificado">Registro modificado con éxito</string>
    <string name="BDNoModificado">No se pudo modificar el registro</string>
    <string name="BDInserta">Datos almacenados con éxito</string>
    <string name="BDNoInserta">No se pudieron almacenar los datos</string>
    <string name="eliminarDialogo">Eliminar...</string>
    <string name="eliminarTorneoPregunta">¿Desea eliminar este torneo?</string>
    <string name="eliminarEquipoPregunta">¿Desea eliminar este equipo?</string>
    <string name="eliminarJugadorPregunta">¿Desea eliminar este jugador?</string>
    <string name="rellena">Rellene todos los campos:\n</string>
    <string name="nombreTorneoRellena">- Nombre del torneo\n</string>
    <string name="lugarTorneoRellena">- Lugar del torneo\n</string>
    <string name="fechaInicioRellena">- Fecha de inicio\n</string>
    <string name="fechaFinRellena">- Fecha de fin\n</string>
    <string name="nombreEquipoRellene">- Nombre del equipo\n</string>
    <string name="ciudadEquipoRellene">- Ciudad del equipo\n</string>
    <string name="estadioEquipoRellene">- Estadio del equipo\n</string>
    <string name="fechaFundacionEquipoRellene">- Año de fundación del equipo\n</string>
    <string name="fechaFundacionDigitosEquipoRellene">- El año debe tener 4 dígitos\n</string>
    <string name="numSociosEquipoRellene">- Nº de socios del equipo\n</string>
    <string name="torneoCreado">Torneo creado con éxito</string>
    <string name="torneoNoCreado">No se pudo crear el torneo</string>
    <string name="equipoCreado">Equipo creado con éxito</string>
    <string name="equipoNoCreado">No se pudo crear el equipo</string>
    <string name="jugadorCreado">Jugador creado con éxito</string>
    <string name="jugadorNoCreado">No se pudo crear el jugador</string>
    <string name="ordenarPor">Ordenar por:</string>
    <string name="crear">Crear</string>
    <string name="nombreTorneo">Nombre del torneo...</string>
    <string name="lugarTorneo">Lugar del torneo...</string>
    <string name="deporte">Deporte:</string>
    <string name="volver">Volver</string>
    <string name="modificar">Modificar</string>
    <string name="fechasNoCorrectas">- Las fechas no son correctas</string>
    <string name="equiposAnadidos">Equipos añadidos con éxito</string>
    <string name="equiposNoAnadidos">No se pudieron añadir equipos</string>
    <string name="noResultados">No tiene resultados</string>
    <string name="creditos">Créditos</string>
    <string name="creditosExp">Autor: Salvador Cordero Rando\nAplicación bajo licencia GPL GNU que permite usar, compartir y modificar el código.\n\nContacto:\n- Twitter: @scorderorando\n- Email: scorderorando@gmail.com</string>
    <string name="areaGestion">Área de Gestión</string>
    <string name="areaEstadisticas">Área de Estadísticas</string>
    <string name="torneo">Torneo</string>
    <string name="torneos">Torneos</string>
    <string name="equipo">Equipo</string>
    <string name="equipos">Equipos</string>
    <string name="jugador">Jugador</string>
    <string name="jugadores">Jugadores</string>
    <string name="crearTorneo">Nuevo Torneo</string>
    <string name="nombre">Nombre</string>
    <string name="numEquipos">Nº Equipos</string>
    <string name="fechaInicio">Fecha\nInicio</string>
    <string name="fechaFin">Fecha\nFin</string>
    <string name="fechaInicioLinea">Fecha Inicio</string>
    <string name="fechaFinLinea">Fecha Fin</string>
    <string name="opciones">Opcs.</string>
    <string name="socios">Num.\nsocios</string>
    <string name="ciudad">Ciudad</string>
    <string name="apodo">Apodo</string>
    <string name="edad">Edad</string>
    <string name="pos.">Pos.</string>
    <string name="posicionSinPuntos">Posición</string>
    <string name="posicion">Posición:</string>
    <string name="tituloTorneo">Crear un nuevo torneo</string>
    <string name="tituloEquipo">Crear un nuevo equipo</string>
    <string name="tituloJugador">Crear un nuevo jugador</string>
    <string name="elijaFiltro">Elija filtro</string>
    <string name="nombreDelTorneo">Nombre del torneo:</string>
    <string name="lugarDelTorneo">Lugar del torneo:</string>
    <string name="numEquiposConPuntos">Nº de equipos:</string>
    <string name="fechaInicioConPuntos">Fecha de inicio:</string>
    <string name="fechaFinConPuntos">Fecha de fin:</string>
    <string name="nombreDelEquipo">Nombre del equipo:</string>
    <string name="ciudadDelEquipo">Ciudad del equipo:</string>
    <string name="estadioConPuntos">Estadio:</string>
    <string name="fechaFundacionConPuntos">Año de fundación:</string>
    <string name="numSociosConPuntos">Nº de socios:</string>
    <string name="numJugadores">Nº de jugadores</string>
    <string name="nombreEquipoPuntos">Nombre del equipo...</string>
    <string name="ciudadPuntos">Ciudad...</string>
    <string name="numSocios">Nº de socios</string>
    <string name="numSociosPuntos">Nº de socios...</string>
    <string name="estadioPuntos">Estadio...</string>
    <string name="fechaFundacionPuntos">Año de fundación...</string>
    <string name="nombreDelJugadorConPuntos">Nombre del jugador:</string>
    <string name="apodoConPuntos">Apodo:</string>
    <string name="fechaNacimientoConPuntos">Fecha de nacimiento:</string>
    <string name="posicionConPuntos">Posición:</string>
    <string name="nombreDelJugador">Nombre del jugador</string>
    <string name="fechaNacimiento">Fecha de nacimiento:</string>
    <string name="nombreJugadorRellena">- Nombre del jugador\n</string>
    <string name="apodoJugadorRellena">- Apodo del jugador\n</string>
    <string name="fechaNacJugadorRellena">- Fecha de nacimiento\n</string>
    <string name="gestionEquipos">Gestión de equipos</string>
    <string name="gestionTorneo">Gestión del torneo</string>
    <string name="anadirEquipos">Añadir equipos</string>
    <string name="eliminarEquipos">Eliminar equipos</string>
    <string name="generarCalendario">Generar calendario</string>
    <string name="irAJornada">Ir a la jornada:</string>
    <string name="jornada">Jornada</string>
    <string name="anadir">Añadir</string>
    <string name="listaEquiposInscritos">Lista de equipos inscritos:</string>
    <string name="listaJugadoresInscritos">Lista de jugadores inscritos:</string>
    <string name="tituloSeleccione">Seleccione una opción</string>
    <string name="ida">Sólo IDA</string>
    <string name="idaVuelta">IDA y VUELTA</string>
    <string name="atencion">¡Atención!</string>
    <string name="reemplazarCalendario">Ya existe un calendario para este torneo, ¿desea reemplazarlo?\nPerderá toda la información anterior.</string>
    <string name="reemplazar">Reemplazar</string>
    <string name="avisoCalendario">Atención: si añade o elimina equipos del torneo, eliminará el calendario si estuviese generado.</string>
    <string name="descansa">Descansa</string>
    <string name="tituloResumenPartido">Resumen del Partido</string>
    <string name="goles">Goles</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="min">Min.</string>
    <string name="minuto">Minuto</string>
    <string name="guardarCambios">Guardar Cambios</string>
    <string name="minutosJugados">Minutos Jugados</string>
    <string name="actualizarJornadaClasificacion">Actualizar jornada en Clasificación</string>
    <string name="numJugadoresConPuntos">Nº Jugadores:</string>
    <string name="gestionJugadores">Gestión de jugadores</string>
    <string name="anadirJugadores">Añadir jugadores</string>
    <string name="eliminarJugadores">Eliminar jugadores</string>
    <string name="ronda">Ronda</string>
    <string name="rondaConPuntos">Ronda: </string>
    <string name="rondas">Rondas</string>
    <string name="r1">Final</string>
    <string name="r2">Semifinales</string>
    <string name="r3">1/4 Final</string>
    <string name="r4">1/8 Final</string>
    <string name="r5">1/16 Final</string>
    <string name="r6">1/32 Final</string>
    <string name="r7">Ronda 1</string>
    <string name="r8">Ronda 2</string>
    <string name="avisoCalendarioJugadores">Atención: si añade o elimina jugadores del torneo, eliminará el calendario si estuviese generado.</string>
    <string name="irARonda">Ir a la Ronda:</string>
    <string name="jugadoresAnadidos">Jugadores añadidos con éxito</string>
    <string name="jugadoresNoAnadidos">No se pudieron añadir jugadores</string>
    <string name="jugadoresNoCorrectos">El número de jugadores no es correcto (2, 4, 8, 16, 32, 64 ó 128)</string>
    <string name="resultadoPartido">Resultado del partido</string>
    <string name="duracionPartido">Duración del partido (minutos):</string>
    <string name="fechaPartido">Fecha del partido</string>
    <string name="fechaPartidoConPuntos">Fecha del partido:</string>
    <string name="horaPartidoConPuntos">Hora:</string>
    <string name="resultadoNoCorrecto">El resultado no es correcto</string>
    <string name="siguienteRonda">Siguiente Ronda</string>
    <string name="mj">MJ</string>
    <string name="pts">Pts</string>
    <string name="fal">Fal</string>
    <string name="reb">Reb</string>
    <string name="tap">Tap</string>
    <string name="mvp">MVP</string>
    <string name="clasificacion">Clasificación</string>
    <string name="maxGoleadores">Máximos goleadores</string>
    <string name="Tarjetas">Tarjetas</string>
    <string name="otrasEstadisticas">Otras estadísticas:</string>
    <string name="golesJugadorEquipo">Goles Jugador/Equipo</string>
    <string name="jugadorMasGoleador">Jugador que más le ha marcado</string>
    <string name="J">J</string>
    <string name="G">G</string>
    <string name="E">E</string>
    <string name="P">P</string>
    <string name="GF">GF</string>
    <string name="GC">GC</string>
    <string name="D">D</string>
    <string name="Pts.">Pts.</string>
    <string name="amarillas">Amarillas</string>
    <string name="rojas">Rojas</string>
    <string name="seleccioneTorneo">Primero seleccione un torneo</string>
    <string name="seleccioneJugador">Primero seleccione un jugador</string>
    <string name="mejorVictoria">Mejor victoria</string>
    <string name="setsFC">Sets Favor/Contra</string>
    <string name="partidosGP">Partidos Gan./Per.</string>
    <string name="setsFavor">Sets a favor</string>
    <string name="setsContra">Sets en contra</string>
    <string name="partidosGanados">Partidos ganados</string>
    <string name="partidosPerdidos">Partidos perdidos</string>
    <string name="PF">PF</string>
    <string name="PC">PC</string>
    <string name="puntos">Puntos</string>
    <string name="vecesMVP">Veces MVP</string>
    <string name="progresion">Progresión</string>
    <string name="maxAnotadores">Máx. Anotadores</string>
    <string name="clasificacionMVP">Clasificación MVP</string>
    <string name="rendimientoEquipos">Rendimiento Equipos</string>
    <string name="datosActualizados">Datos actualizados</string>
    <string name="title_activity_pantalla_bienvenida">PantallaBienvenida</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
</resources>