<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:background="@color/negro"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:text="@string/nombreDelJugadorConPuntos" />
        
        <TextView
            android:id="@+id/txtVerJugadorNombreBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:text="@string/apodoConPuntos" />
        
        <TextView
            android:id="@+id/txtVerJugadorApodoBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:text="@string/fechaNacimientoConPuntos" />
        
        <TextView
            android:id="@+id/txtVerJugadorFechaNacBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:text="@string/nombreDelEquipo" />
        
        <TextView
            android:id="@+id/txtVerJugadorEquipoBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:text="@string/posicionConPuntos" />
        
        <TextView
            android:id="@+id/txtVerJugadorPosicionBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:textColor="@color/blanco"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>