<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:background="@color/blanco"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:text="@string/nombreDelEquipo" />
        
        <EditText
            android:id="@+id/edtModEquipoNombreBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:text="@string/ciudadDelEquipo" />
        
        <EditText
            android:id="@+id/edtModEquipoCiudadBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:text="@string/estadioConPuntos" />
        
        <EditText
            android:id="@+id/edtModEquipoEstadioBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:text="@string/fechaFundacionConPuntos" />
        
        <EditText
            android:id="@+id/edtModEquipoFechaFundacionBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="text"
            android:maxLength="4"
            android:textAlignment="center"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:text="@string/numSociosConPuntos" />
        
        <EditText
            android:id="@+id/edtModEquipoNumSociosBC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="text"
            android:textAlignment="center"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>