<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:text="@string/nombreDelJugadorConPuntos"
            android:textColor="@color/negro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtModJugadorNombrePadel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:text="@string/apodoConPuntos"
            android:textColor="@color/negro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtModJugadorApodoPadel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left|center_vertical"
            android:text="@string/fechaNacimientoConPuntos"
            android:textColor="@color/negro"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtModJugadorFechaNacPadel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left|center_vertical"
            android:textColor="@color/negro"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnModPadelFechaNac"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:padding="3dip"
            android:src="@drawable/icono_calendario_32" />
    </LinearLayout>
</LinearLayout>